codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__footer_mode_configured_key_chords.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"› Ask Codex to do anything                                                                          "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  / for commands                          ! for shell commands                                      "
"  ctrl + x enter for newline              tab to submit message                                     "
"  @ for file paths                        ctrl + v to paste images                                  "
"  ctrl + shift + c to copy draft          ctrl + g ctrl + g to edit in external editor              "
"  esc esc to edit previous message        ctrl + r search history                                   "
"  ctrl + c to exit                        ⌥ + , reasoning down                                      "
"  ⌥ + . reasoning up                      ctrl + t to view transcript                               "
"                                                                                                    "
"  customize shortcuts with /keymap                                                                  "
